# vcd_tools_rs

./: .gitignore  CLI_REFERENCE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml
examples/: signal_paths.json
src/: lib.rs  main.rs  python.rs
tests/: integration_tests.rs
vcd_tools/: __init__.py  _cli.py
