[package]
name = "vcd_tools_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
vcd = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"

[[bin]]
name = "vcd2trace"
path = "src/bin/vcd2trace.rs"
