[package]
name = "vcd_tools_rs"
version = "0.1.7"
edition = "2024"
authors = ["Ronan Barzic <rbarzic@gmail.com>"]
license = "MIT"
repository = "https://github.com/rbarzic/vcd_tools_rs"
description = "Fast streaming VCD file analysis tools"

[lib]
name = "vcd_tools_rs"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3/extension-module"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
vcd = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23", optional = true }

[dev-dependencies]
tempfile = "3.14"

[[bin]]
name = "vcd_tools_rs"
path = "src/main.rs"

[[bin]]
name = "vcd2trace"
path = "src/bin/vcd2trace.rs"
